# bt610_firmware

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  ReleaseNotes_BT610.md  app.yml  b0_bt610.conf  bt6xx.code-workspace  debugger.jdebug  increment_build_version.py  mcuboot_bt610.conf  ozone.jdebug  pm_static.sb.bt610.yml  prj.conf  west.yml  workspace_test.code-workspace
app/attributes/: app_methods.yml  app_params.yml
app/components/attributes/include/: attr_table.h
app/components/attributes/src/: attr_table.c
apps/peripheral_IO/: CMakeLists.txt  Kconfig  prj.conf
apps/peripheral_IO/framework_config/: FrameworkIds.h  FrameworkMsgCodes.h  FrameworkMsgTypes.h
apps/peripheral_IO/include/: AdcRead.h  AnalogSensorTask.h  AttributeFunctions.h  BT610_mgmt.h  BleTask.h  Bracket.h  BspSupport.h  CborBuilder.h  ControlTask.h  Framework.h  LairdAdvFormat.h  ProtocolTask.h  Sentrius_mgmt.h  SystemUartTask.h  UserCommTask.h  UserInterfaceTask.h  Version.h
apps/peripheral_IO/parameterApi/: BT6Api.json  mgmtGenerator.py  parmGenerator.py
apps/peripheral_IO/src/: AdcRead.c  AnalogSensorTask.c  AttributeFunctions.c  BT610_mgmt.c  BleTask.c  BspSupport.c  CborBuilder.c  ControlTask.c  Framework.c  LedPwm.c  ProtocolTask.c  Sentrius_mgmt.c  Sentrius_mgmtHandlers.c  SystemUartTask.c  TestMenu.c  UserCommTask.c  UserInterfaceTask.c  Version.c  hog.c  main.c
boards/: bootloader.bt610.overlay  bt610.overlay
common/: Kconfig  Kconfig.adc_bt6  Kconfig.attribute  Kconfig.event_log
common/framework_config/: FrameworkIds.h  FrameworkIncludes.h  FrameworkMsgCodes.h  FrameworkMsgTypes.h  framework_ids_list.h  framework_msg_codes_list.h
common/include/: AdcBt6.h  Advertisement.h  AggregationCount.h  AlarmControl.h  AnalogInput.h  Attribute.h  AttributeFunctions.h  AttributePrivate.h  AttributeTable.h  AttributeTask.h  AttributeValidator.h  BleTask.h  BspSupport.h  CBORSupport.h  CborBuilder.h  ControlTask.h  EventLog.h  EventTask.h  FileAccess.h  Flags.h  HalfFloatDecoder.h  LEDs.h  LairdAdvFormat.h  NonInit.h  NonInitStruct.h  SensorTask.h  Sentrius_mgmt.h  Sentrius_mgmt_config.h  Sentrius_mgmt_impl.h  UserCommTask.h  UserInterfaceTask.h  Watchdog.h  production_mgmt.h
common/source/: AdcBt6.c  Advertisement.c  AggregationCount.c  AlarmControl.c  AnalogSensorTask.c  Attribute.c  AttributeFunctions.c  AttributeShell.c  AttributeTable.c  AttributeTask.c  AttributeValidator.c  BleTask.c  BspSupport.c  CBORSupport.c  ControlTask.c  EventLog.c  EventTask.c  FileAccess.c  Flags.c  HalfFloatDecoder.c  LEDs.c  LedPwm.c  LockShell.c  NonInit.c  RecoveryShell.c  SensorTask.c  Sentrius_mgmt.c  Sentrius_mgmtHandlers.c  SystemUartTask.c  Template.c  TestMenu.c  UserCommTask.c  UserInterfaceTask.c  Watchdog.c  main.c
components/alarms/attributes/: alarms_params.yml
components/alarms/input/: alarm_defines.yml
components/attributes/bt610/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/bt610/include/: attr_custom_validator.h  attr_table.h  attr_util.h
components/attributes/bt610/src/: attr_custom_validator.c  attr_hash.c  attr_table.c
components/attributes/include/: attr_custom_validator.h
components/attributes/src/: attr_custom_validator.c
components/flags/attributes/: flags_params_0.yml
components/flags/input/: flag_defines.yml
docs/: ble.md  development.md  firmware_update.md
hci_uart/: CMakeLists.txt  prj.conf
include/: AdcBt6.h  Advertisement.h  BspSupport.h  ControlTask.h  EventTask.h  FileAccess.h  Flags.h  LEDs.h  NonInitStruct.h  SensorTask.h  led_configuration.h
memfault/: memfault_metrics_heartbeat_config.def
peripheral_IO/: CMakeLists.txt  Kconfig  b0_bt6.conf  b0_bt610.conf  bt6.overlay  mcuboot_bt6.conf  pm_static_bt6.yml  prj.conf
peripheral_IO/include/: Version.h
peripheral_IO/parameterApi/: BT6Api.json  BT6ApiParams.json  BT6ApiParams_string.json  mgmtGenerator - Copy.py  mgmtGenerator.py  paramGenerator.py  parmGenerator - Copy.py  parmGenerator.py
scripts/: factory_init.prod.sh  factory_init.qa.sh  factory_init.sh  script_factory_load.txt
src/: AdcBt6.c  Advertisement.c  BleTask.c  BspSupport.c  FileAccess.c  Flags.c  Kconfig  Kconfig.ui  LEDs.c  SensorTask.c  TestMenu.c  UserInterfaceTask.c  main.c  production_mgmt.c
src/framework_config/: FrameworkIncludes.h  framework_msg_codes_list.h
src/version/: app_version.h.in
